--- a/data_pipelines/99-populate-rag-db.ipynb
+++ b/data_pipelines/99-populate-rag-db.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -q pypdf amazon-textract-textractor[pdf] 2> /dev/null"
+    "%pip install -q pypdf amazon-textract-textractor[pdf] requests 2> /dev/null"
    ]
   },
   {
@@ -77,7 +77,9 @@
    "source": [
     "## Calculate embeddings for the documents, load data into Aurora Postgres\n",
     "\n",
-    "Now that we have the text we extracted from the documents, we can create chunks from them, calculate the embeddings for each chunk and load this data into Aurora Postgres. We also load the analytical data from the `extracted_enties.csv` file. "
+    "Now that we have the text we extracted from the documents, we can create chunks from them, calculate the embeddings for each chunk and load this data into Aurora Postgres. We also load the analytical data from the `extracted_enties.csv` file. \n",
+    "\n",
+    "We first retrieve some values from the deployed infrastructure which is needed for the SageMaker processor container to run."
    ]
   },
   {
