fix: fewer cells and missing variable

--- a/data_pipelines/01-validate-sagemaker-jobs-connection-to-postgreSQL.ipynb
+++ b/data_pipelines/01-validate-sagemaker-jobs-connection-to-postgreSQL.ipynb
@@ -84,7 +84,8 @@
     "db_secret_arn = db_secret_arn[\"Parameter\"][\"Value\"]\n",
     "\n",
     "subnet_ids = ssm.get_parameter(Name=subnet_ids_parameter)\n",
-    "private_subnets_with_egress_ids = json.loads(subnet_ids[\"Parameter\"][\"Value\"])"
+    "private_subnets_with_egress_ids = json.loads(subnet_ids[\"Parameter\"][\"Value\"])\n",
+    "script_processor_container_uri = ssm.get_parameter(Name=script_processor_container_parameter)[\"Parameter\"][\"Value\"]"
    ]
   },
   {
@@ -175,7 +176,7 @@
    "id": "dcb8bed1-bef3-4fd7-84b7-29dd4b418362",
    "metadata": {},
    "source": [
-    "## Attempt the same in a SageMaker processing job with VPC network config"
+    "## Attempt the same in a SageMaker processing job with VPC network config"
    ]
   },
   {
