--- a/data_pipelines/02-download-raw-pdf-documents.ipynb
+++ b/data_pipelines/02-download-raw-pdf-documents.ipynb
@@ -163,7 +163,7 @@
    },
    "outputs": [],
    "source": [
-    "ls {raw_base_directory}/Amazon"
+    "!ls {raw_base_directory}/Amazon"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "id": "87a9f7bd-81e0-46b2-aa37-abddd1b0f1ec",
    "metadata": {},
    "source": [
-    "## Keep relevant pages\n",
+    "## Keep relevant pages\n",
     "\n",
     "Although you can run the full PDF documents through the solution, to optimize the extraction costs, we suggest that you select the relevant pages from each pdf documents."
    ]
@@ -354,7 +354,7 @@
    },
    "outputs": [],
    "source": [
-    "ls {prepared_base_directory}"
+    "!ls {prepared_base_directory}"
    ]
   },
   {
@@ -366,7 +366,7 @@
    },
    "outputs": [],
    "source": [
-    "cat {prepared_base_directory}/metadata.json | python -m json.tool"
+    "!cat {prepared_base_directory}/metadata.json | python -m json.tool"
    ]
   }
  ],
