--- a/data_pipelines/04-create-and-load-embeddings-into-aurora-postgreSQL.ipynb
+++ b/data_pipelines/04-create-and-load-embeddings-into-aurora-postgreSQL.ipynb
@@ -33,7 +33,6 @@
    "source": [
     "import json\n",
     "import os\n",
-    "\n",
     "import boto3"
    ]
   },
@@ -75,16 +74,10 @@
     "private_subnets_with_egress_ids = json.loads(subnet_ids[\"Parameter\"][\"Value\"])\n",
     "\n",
     "s3_bucket_name = ssm.get_parameter(Name=s3_bucket_name_parameter)\n",
-    "s3_bucket_name = s3_bucket_name[\"Parameter\"][\"Value\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "42dac5f7-97f4-4f4f-9869-9e7b68a23e5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "s3_bucket_name = s3_bucket_name[\"Parameter\"][\"Value\"]\n",
+    "\n",
+    "script_processor_container_uri = ssm.get_parameter(Name=script_processor_container_parameter)[\"Parameter\"][\"Value\"]\n",
+    "\n",
     "processed_documents_s3_key = \"documents_processed.json\""
    ]
   },
