--- a/data_pipelines/05-load-sql-tables-into-aurora-postgreSQL.ipynb
+++ b/data_pipelines/05-load-sql-tables-into-aurora-postgreSQL.ipynb
@@ -75,16 +75,10 @@
     "private_subnets_with_egress_ids = json.loads(subnet_ids[\"Parameter\"][\"Value\"])\n",
     "\n",
     "s3_bucket_name = ssm.get_parameter(Name=s3_bucket_name_parameter)\n",
-    "s3_bucket_name = s3_bucket_name[\"Parameter\"][\"Value\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "42dac5f7-97f4-4f4f-9869-9e7b68a23e5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "s3_bucket_name = s3_bucket_name[\"Parameter\"][\"Value\"]\n",
+    "\n",
+    "processed_documents_s3_key = \"documents_processed.json\"\n",
+    "\n",
     "sql_tables_s3_key = \"structured_metadata\""
    ]
   },
