fix: Add missing variable declaration

--- a/data_pipelines/01-validate-sagemaker-jobs-connection-to-postgreSQL.ipynb
+++ b/data_pipelines/01-validate-sagemaker-jobs-connection-to-postgreSQL.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "79bc6931-bd74-4f63-a232-ee98435bddf5",
    "metadata": {
     "tags": []
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "1a0f6dc3-ee25-4ace-bd24-7fb9fa066501",
    "metadata": {
     "tags": []
@@ -76,6 +76,7 @@
     "security_group_parameter = \"/AgenticLLMAssistantWorkshop/SMProcessingJobSecurityGroupId\"\n",
     "dbsecret_arn_parameter = \"/AgenticLLMAssistantWorkshop/DBSecretARN\"\n",
     "subnet_ids_parameter = \"/AgenticLLMAssistantWorkshop/SubnetIds\"\n",
+    "script_processor_container_parameter = \"/AgenticLLMAssistantWorkshop/ScriptProcessorContainer\"\n",
     "\n",
     "security_group = ssm.get_parameter(Name=security_group_parameter)\n",
     "security_group = security_group[\"Parameter\"][\"Value\"]\n",
