--- a/data_pipelines/04-create-and-load-embeddings-into-aurora-postgreSQL.ipynb
+++ b/data_pipelines/04-create-and-load-embeddings-into-aurora-postgreSQL.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1a0f6dc3-ee25-4ace-bd24-7fb9fa066501",
    "metadata": {
     "tags": []
@@ -63,6 +63,7 @@
     "dbsecret_arn_parameter = \"/AgenticLLMAssistantWorkshop/DBSecretARN\"\n",
     "subnet_ids_parameter = \"/AgenticLLMAssistantWorkshop/SubnetIds\"\n",
     "s3_bucket_name_parameter = \"/AgenticLLMAssistantWorkshop/AgentDataBucketParameter\"\n",
+    "script_processor_container_parameter = \"/AgenticLLMAssistantWorkshop/ScriptProcessorContainer\"\n",
     "\n",
     "security_group = ssm.get_parameter(Name=security_group_parameter)\n",
     "security_group = security_group[\"Parameter\"][\"Value\"]\n",
