Added variable declaration for script processor container

--- a/data_pipelines/05-load-sql-tables-into-aurora-postgreSQL.ipynb
+++ b/data_pipelines/05-load-sql-tables-into-aurora-postgreSQL.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1a0f6dc3-ee25-4ace-bd24-7fb9fa066501",
    "metadata": {
     "tags": []
@@ -64,6 +64,7 @@
     "dbsecret_arn_parameter = \"/AgenticLLMAssistantWorkshop/DBSecretARN\"\n",
     "subnet_ids_parameter = \"/AgenticLLMAssistantWorkshop/SubnetIds\"\n",
     "s3_bucket_name_parameter = \"/AgenticLLMAssistantWorkshop/AgentDataBucketParameter\"\n",
+    "script_processor_container_uri = ssm.get_parameter(Name=\"/AgenticLLMAssistantWorkshop/ScriptProcessorContainer\")[\"Parameter\"][\"Value\"]\n",
     "\n",
     "security_group = ssm.get_parameter(Name=security_group_parameter)\n",
     "security_group = security_group[\"Parameter\"][\"Value\"]\n",
